objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Advisor__c</fullName>
        <description>Request verba 11.11.2017 - for Insight to capture GAB members</description>
        <label>Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GAB member</fullName>
                </value>
                <value>
                    <fullName>Ignite contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sandeep&apos;s contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Atlassian_Jira_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shall be used to determine if the user is also an Atlassian Marketplace interest for Exploratory testing.
Shall be used for Marketing segmentation.
Request from Wayne 25.07.2017</description>
        <label>Atlassian Jira User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shall be used to determine if the user is interested in our Cloud Offering/solution.
Shall be used for Marketing segmentation.
Request from Wayne 26.09.2017</description>
        <label>Cloud Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Age_Hours__c</fullName>
        <formula>(TODAY()-DATEVALUE(CreatedDate))*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Age (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contacted_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Contacted_Status_End__c)), (Contacted_Status_End__c-Contacted_Status_Start__c)*24,
IF(ISNULL(Contacted_Status_End__c), (NOW()-Contacted_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacted Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Status_End__c</fullName>
        <label>Contacted Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contacted_Status_Start__c</fullName>
        <label>Contacted Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of Subscription Center; User will receive content-related email send-outs from Marketo</description>
        <label>Subscription Content &amp; Best Practices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Address__c</fullName>
        <label>Company HQ Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_City__c</fullName>
        <label>Company HQ City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Code__c</fullName>
        <label>Company HQ Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Full_Name__c</fullName>
        <label>Company HQ Country (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Postal_Code__c</fullName>
        <label>Company HQ Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State_Full_Name__c</fullName>
        <label>Company HQ State (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State__c</fullName>
        <label>Company HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Conflict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict</label>
        <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DeletedFromDiscoverOrg__c</fullName>
        <label>DeletedFromDiscoverOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Company_ID__c</fullName>
        <label>DiscoverOrg Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Created_On__c</fullName>
        <label>Created by DiscoverOrg</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_First_Update__c</fullName>
        <label>DiscoverOrg First Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_FullCountryName__c</fullName>
        <label>DiscoverOrg Country Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_LastUpdate__c</fullName>
        <label>DiscoverOrg Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_State_Full_Name__c</fullName>
        <label>DiscoverOrg State Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Technologies__c</fullName>
        <label>DiscoverOrg Technologies</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Email_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Exclude_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can use this checkbox to exclude record from getting updated from DiscoverOrg.</description>
        <label>Lock from DiscoverOrg Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__External_DiscoverOrg_Id__c</fullName>
        <externalId>true</externalId>
        <label>DiscoverOrg Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ITOrgChart__c</fullName>
        <formula>IF(ISBLANK(Account.DSCORGPKG__DiscoverOrg_ID__c) = false, 
HYPERLINK( 
&apos;/apex/DSCORGPKG__itorgchart?co_id=&apos; +  Account.DSCORGPKG__DiscoverOrg_ID__c + &apos;&amp;scrollTo=&apos; +  DSCORGPKG__DiscoverOrg_ID__c , 
&apos;View&apos;, 
&apos;_blank&apos;) , 
&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Org Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Job_Function__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Locked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NickName__c</fullName>
        <label>NickName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__REMOVELinkedinURL__c</fullName>
        <label>REMOVELinkedinURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ReportsTo__c</fullName>
        <label>DiscoverOrg ReportsTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__department__c</fullName>
        <label>DiscoverOrg Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__title_Custom__c</fullName>
        <label>title_Custom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engaged_Date__c</fullName>
        <label>Engaged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Subscription Center; User will receive Event related send-outs if checked</description>
        <label>Subscription Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__EventbriteId__c</fullName>
        <label>Eventbrite Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__EventbriteType__c</fullName>
        <label>Eventbrite Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Attendee Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventbriteSync__UniquePersonId__c</fullName>
        <formula>IF(ISBLANK(Email),&quot;*&quot;,Email) &amp; &quot;%&quot; &amp; 
IF(ISBLANK(FirstName),&quot;*&quot;,FirstName) &amp; &quot;%&quot; &amp; 
IF(ISBLANK(LastName),&quot;*&quot;,LastName) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Person Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <description>For reporting on location</description>
        <inlineHelpText>Used for grouping in reports. 3 Geos available: EMEA, US, APAC</inlineHelpText>
        <label>Geo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiated_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Initiated_Status_End__c)), (Initiated_Status_End__c-Initiated_Status_Start__c)*24,
IF(ISNULL(Initiated_Status_End__c), (NOW()-Initiated_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiated Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiated_Status_End__c</fullName>
        <label>Initiated Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiated_Status_Start__c</fullName>
        <label>Initiated Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>List_source__c</fullName>
        <label>List source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apache JMeter - Brigade</fullName>
                </value>
                <value>
                    <fullName>Atlassian</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Discover.org</fullName>
                </value>
                <value>
                    <fullName>DiscoverOrg</fullName>
                </value>
                <value>
                    <fullName>E4U</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>External Webinar</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>InsideView</fullName>
                </value>
                <value>
                    <fullName>JMeter</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>Netprospex</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>RainKing</fullName>
                </value>
                <value>
                    <fullName>Sales Rolodex</fullName>
                </value>
                <value>
                    <fullName>SD Times</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Techwell</fullName>
                </value>
                <value>
                    <fullName>Tradeshow - AttendeeList</fullName>
                </value>
                <value>
                    <fullName>Web Research</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
                <value>
                    <fullName>ZoomInfo</fullName>
                </value>
                <value>
                    <fullName>Event_Tradeshow</fullName>
                    <isActive>false</isActive>
                    <label>Tradeshow Attendee List</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <description>New Date field for MQL for new scoring logic
bazwe 23.12.2017 - request by David Sin</description>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Stage__c</fullName>
        <label>Marketing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Name</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Name_Date__c</fullName>
        <label>New Name Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Newsletter_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Subscription Center; User will receive Newsletter related send-outs if checked</description>
        <label>Subscription Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Now_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Not_Now_Status_End__c)), (Not_Now_Status_End__c-Not_Now_Status_Start__c), IF(ISNULL(Not_Now_Status_End__c), (NOW()-Not_Now_Status_Start__c), NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Now Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Now_Status_End__c</fullName>
        <label>Not Now Status End </label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Now_Status_Start__c</fullName>
        <label>Not Now Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Open_Status_End__c)), (Open_Status_End__c-Open_Status_Start__c)*24, 
IF(ISNULL(Open_Status_End__c), (NOW()-Open_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Status_End__c</fullName>
        <label>Open Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Status_Start__c</fullName>
        <label>Open Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <defaultValue>1</defaultValue>
        <label>PowerOfOne</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Qualified_Status_End__c)), (Qualified_Status_End__c-Qualified_Status_Start__c)*24,
IF(ISNULL(Qualified_Status_End__c), (NOW()-Qualified_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified_Status_End__c</fullName>
        <label>Qualified Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualified_Status_Start__c</fullName>
        <label>Qualified Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether this person is a reference contact for the account associated.</description>
        <inlineHelpText>Defines whether this person is a reference contact for the account associated.</inlineHelpText>
        <label>Reference Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Now_User_ID__c</fullName>
        <description>Captures the ID of the Service Now User object</description>
        <label>Service Now User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Now_User_active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures the Service Now data about the status of the user - active or inactive</description>
        <label>Service Now User active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SnowOutboundInSynch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reflects, that a record is currently in synchronization</description>
        <label>SnowOutboundInSynch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SnowOutboundSynchDone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reflects, that a record is synchronized</description>
        <label>SnowOutboundSynchDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>TEXT( Account.Tier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Subscription Center; User will receive Webinar related send-outs if checked</description>
        <label>Subscription Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X_Mas_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shall this contact receive a X-Mas card? If yes check this field.</description>
        <inlineHelpText>Shall this contact receive a X-Mas card? If yes check this field.</inlineHelpText>
        <label>X-Mas Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xing_URL__c</fullName>
        <description>Xing URL field - used for mostly DACH region.</description>
        <inlineHelpText>Please use this field to enter a Xing URL. Format: e.g.: www.google.com</inlineHelpText>
        <label>Xing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>account_demographic_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Account Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>behavior_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contact_status__c</fullName>
        <description>For Lead/Contact Status</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solar flare</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Re-open</fullName>
                </value>
                <value>
                    <fullName>Rejected/Disqualified</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Not Now</fullName>
                </value>
                <value>
                    <fullName>Qualified - (SQL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_date_targeted_company__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Company</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_targeted_country__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Country</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_targeted_email__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_targeted_title__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Title</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_company__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Company</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_country__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Country</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_email__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_first_name__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid First Name</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_last_name__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Last Name</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_demo_request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Demo Request</description>
        <label>Demo Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_disqualified_reason__c</fullName>
        <description>For Lead/Contact Status</description>
        <label>Rejected/Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>contact_status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Junk - No email or name or company name or spam</fullName>
                </value>
                <value>
                    <fullName>Not a Sales Lead</fullName>
                </value>
                <value>
                    <fullName>Non-target – Geo Vertical, or job-level</fullName>
                </value>
                <value>
                    <fullName>Moved to another company</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_external_record_id__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>External Record ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_date__c</fullName>
        <label>First Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts (First Campaign)</relationshipLabel>
        <relationshipName>first_campaign_contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_follow_up_date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_funnel__c</fullName>
        <description>For funnel grid</description>
        <label>Funnel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MRL</fullName>
                </value>
                <value>
                    <fullName>MVL</fullName>
                </value>
                <value>
                    <fullName>MTL</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_last_campaign_date__c</fullName>
        <label>Last Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_last_campaign_tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts (Last Campaign)</relationshipLabel>
        <relationshipName>last_campaign_contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_last_engagement_date__c</fullName>
        <description>For showing last engagement date</description>
        <label>Last Engagement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_linkedin_url__c</fullName>
        <description>For displaying Linkedin URL for a person</description>
        <label>Linkedin URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dr_might_be_junk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Junk</description>
        <label>Might Be Junk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_might_be_spam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Spam</description>
        <label>Might Be Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_mql__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_mql_utc__c</fullName>
        <formula>text(dr_mql__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL-UTC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_mrl__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MRL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_mtl__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MTL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_mvl__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MVL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_not_now_reasons__c</fullName>
        <label>Not Now Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>contact_status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tried to Contact - Will follow up later</fullName>
                </value>
                <value>
                    <fullName>Budget not available now - Will follow up later</fullName>
                </value>
                <value>
                    <fullName>Tried to Contact - Not following up, needs nurture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_number_of_campaigns__c</fullName>
        <label>Number of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dr_opted_in_to_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opted-in to Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_quote_request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Quote Request</description>
        <label>Quote Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_support_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_talk_to_sales_now__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Talk to Sales check box</description>
        <label>Talk to Sales Now</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>